# SWUFE_EMS_TOOL

./: LICENSE  README.md  pyproject.toml
app/: main.py  res.py  test.html
client/app/view/: register_window.py
doc/: login_API.md
